[gd_scene load_steps=20 format=3 uid="uid://dkk7gn3qoo1fl"]

[ext_resource type="Script" path="res://scenes/Levels/level_1_3.gd" id="1_8y26q"]
[ext_resource type="Material" uid="uid://4fklhayl8xgb" path="res://assets/Platform.tres" id="1_jrstr"]
[ext_resource type="Script" path="res://objects/Gate/Gate.gd" id="1_nquxu"]
[ext_resource type="Shader" path="res://assets/Outline.gdshader" id="2_e1sng"]
[ext_resource type="PackedScene" uid="uid://cuu7y6g7d73p8" path="res://objects/Spawner/spawner.tscn" id="2_kyncm"]
[ext_resource type="Script" path="res://objects/Sensor/sensor.gd" id="3_1q7o8"]
[ext_resource type="PackedScene" uid="uid://d1e0ugdqkbr86" path="res://objects/Flag/flag.tscn" id="4_a2wmm"]
[ext_resource type="Texture2D" uid="uid://cb2jtox1ai0k6" path="res://assets/FAR_JUMP.png" id="5_2nu5i"]
[ext_resource type="Texture2D" uid="uid://bgq7jv0p0ukpc" path="res://assets/HIGH_JUMP.png" id="6_b1kg5"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_os36j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bjbs8"]
render_priority = 0
shader = ExtResource("2_e1sng")
shader_parameter/outlineColor = Color(0, 0, 0, 0.78)
shader_parameter/depth_threshold = 0.025
shader_parameter/normal_threshold = 0.5
shader_parameter/normal_smoothing = 0.25
shader_parameter/max_thickness = 1.3
shader_parameter/min_thickness = 0.5
shader_parameter/max_distance = 75.0
shader_parameter/min_distance = 2.0
shader_parameter/grazing_fresnel_power = 5.0
shader_parameter/grazing_angle_mask_power = 1.0
shader_parameter/grazing_angle_modulation_factor = 50.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fx6m6"]
next_pass = SubResource("ShaderMaterial_bjbs8")
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.619434, 0.794691, 0.869058, 1)
roughness = 0.02

[sub_resource type="BoxMesh" id="BoxMesh_egucu"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_fx6m6")
size = Vector3(3, 5, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_04ulw"]
albedo_color = Color(0.513726, 1, 0.431373, 1)

[sub_resource type="BoxMesh" id="BoxMesh_3kuta"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_04ulw")

[sub_resource type="BoxShape3D" id="BoxShape3D_5wg2s"]
size = Vector3(1, 1, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_pry5f"]
size = Vector3(3, 5, 3)

[sub_resource type="BoxMesh" id="BoxMesh_6dsyq"]
material = ExtResource("1_jrstr")
size = Vector3(3, 1, 3)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_1njj0"]
data = PackedVector3Array(-1.5, 0.5, 1.5, 1.5, 0.5, 1.5, -1.5, -0.5, 1.5, 1.5, 0.5, 1.5, 1.5, -0.5, 1.5, -1.5, -0.5, 1.5, 1.5, 0.5, -1.5, -1.5, 0.5, -1.5, 1.5, -0.5, -1.5, -1.5, 0.5, -1.5, -1.5, -0.5, -1.5, 1.5, -0.5, -1.5, 1.5, 0.5, 1.5, 1.5, 0.5, -1.5, 1.5, -0.5, 1.5, 1.5, 0.5, -1.5, 1.5, -0.5, -1.5, 1.5, -0.5, 1.5, -1.5, 0.5, -1.5, -1.5, 0.5, 1.5, -1.5, -0.5, -1.5, -1.5, 0.5, 1.5, -1.5, -0.5, 1.5, -1.5, -0.5, -1.5, 1.5, 0.5, 1.5, -1.5, 0.5, 1.5, 1.5, 0.5, -1.5, -1.5, 0.5, 1.5, -1.5, 0.5, -1.5, 1.5, 0.5, -1.5, -1.5, -0.5, 1.5, 1.5, -0.5, 1.5, -1.5, -0.5, -1.5, 1.5, -0.5, 1.5, 1.5, -0.5, -1.5, -1.5, -0.5, -1.5)

[node name="Level 1-3" type="Node3D" node_paths=PackedStringArray("gate")]
script = ExtResource("1_8y26q")
gate = NodePath("GateRemoteTransform3D")

[node name="GateRemoteTransform3D" type="RemoteTransform3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.576, 0, 0)
remote_path = NodePath("Gate")

[node name="Gate" type="AnimatableBody3D" parent="GateRemoteTransform3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
physics_material_override = SubResource("PhysicsMaterial_os36j")
script = ExtResource("1_nquxu")
gate_dir = -8
gate_height = 9

[node name="GateMesh" type="MeshInstance3D" parent="GateRemoteTransform3D/Gate"]
transform = Transform3D(1, -3.72564e-11, 0, -1.04201e-11, 1, -7.27596e-12, 1.45519e-11, 3.63798e-12, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_egucu")

[node name="Sensor" type="MeshInstance3D" parent="GateRemoteTransform3D/Gate"]
transform = Transform3D(0.983584, 0.000186419, -0.000141759, -0.000186408, 0.983584, 5.39943e-05, 0.000141775, -5.3954e-05, 0.983584, 0, 3, -1)
mesh = SubResource("BoxMesh_3kuta")
skeleton = NodePath("../..")
script = ExtResource("3_1q7o8")

[node name="Area3D" type="Area3D" parent="GateRemoteTransform3D/Gate/Sensor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="GateRemoteTransform3D/Gate/Sensor/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
shape = SubResource("BoxShape3D_5wg2s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GateRemoteTransform3D/Gate"]
transform = Transform3D(1, -3.75557e-11, 0, -6.66578e-11, 1, -7.27596e-12, 7.27596e-11, -1.09139e-11, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_pry5f")

[node name="Platform" type="MeshInstance3D" parent="."]
transform = Transform3D(1, -9.47561e-05, 0.000127197, 9.47623e-05, 1, -4.84132e-05, -0.000127192, 4.84252e-05, 1, -16.577, -4, 0)
mesh = SubResource("BoxMesh_6dsyq")
skeleton = NodePath("../../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Platform"]
transform = Transform3D(1, 3.41771e-12, 0, 1.0707e-11, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_1njj0")

[node name="Spawner" parent="Platform" instance=ExtResource("2_kyncm")]
transform = Transform3D(1, 3.41771e-12, 0, -4.02247e-11, 1, 0, 0, 0, 1, -0.952999, 1.622, -1)
level = 2

[node name="Spawner2" parent="Platform" instance=ExtResource("2_kyncm")]
transform = Transform3D(1, 3.41771e-12, 0, -5.47766e-11, 1, 0, 0, 0, 1, 0.789998, 1.613, -1)
cube_type = 1
level = 2

[node name="Platform2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, -9.47561e-05, 0.000127197, 9.47623e-05, 1, -4.84132e-05, -0.000127192, 4.84252e-05, 1, 2.5, -4, 0)
mesh = SubResource("BoxMesh_6dsyq")
skeleton = NodePath("../../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Platform2"]
transform = Transform3D(1, 3.41771e-12, 0, 1.0707e-11, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_1njj0")

[node name="Flag" parent="Platform2" instance=ExtResource("4_a2wmm")]
transform = Transform3D(1, 3.41771e-12, 0, -3.29488e-11, 1, 0, 0, 0, 1, 0.000271678, 1.5186, -1.00512)

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, -10.545, 19.743, -1.2)
text = "Level 1-3: High Jump, Long Jump
"

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.914535, 11.2169, 0)
pixel_size = 0.02
texture = ExtResource("5_2nu5i")

[node name="Sprite3D2" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.8179, 11.8102, 0)
pixel_size = 0.02
texture = ExtResource("6_b1kg5")

[connection signal="sensor_activate" from="GateRemoteTransform3D/Gate/Sensor" to="GateRemoteTransform3D/Gate" method="_on_sensor_activate"]
[connection signal="body_entered" from="GateRemoteTransform3D/Gate/Sensor/Area3D" to="GateRemoteTransform3D/Gate/Sensor" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="GateRemoteTransform3D/Gate/Sensor/Area3D" to="GateRemoteTransform3D/Gate/Sensor" method="_on_area_3d_body_exited"]
